# securefiletransfer

./: .gitignore  CMakeLists.txt  README.md
src/: ClientWidget.cpp  ClientWidget.h  Encryption.cpp  Encryption.h  MainWindow.cpp  MainWindow.h  ServerWidget.cpp  ServerWidget.h  TransferSession.cpp  TransferSession.h  ui_ClientWidget.h  ui_MainWindow.h  ui_ServerWidget.h
ui/: ClientWidget.ui  MainWindow.ui  ServerWidget.ui
